# Arcade

./: .gitignore  CMakeLists.txt  IDisplayModule.hpp  IGameModule.hpp  LIB.md  README.md  clean.sh  run.sh
assets/PACMAN/ncurses/: bigPacgum  cornerDiagonalLeft_wall  cornerDiagonalRight_wall  en1  en2  en3  en4  endead  enweak  little_wall  pacgum  player  space  vertical_wall  wall
assets/PACMAN/sdl/: en1  endead  pacgum  vertical_wall
assets/PACMAN/sfml/: bigPacgum  en2  en3  en4  enweak  little_wall  player  wall
assets/SNAKE/ncurses/: body  food  head  mur
assets/SNAKE/sdl/: body  head
assets/SNAKE/sfml/: food  mur
src/: Main.cpp
src/Core/: Arcade.cpp  Arcade.hpp  Core.cpp  Core.hpp  DlLoader.cpp  DlLoader.hpp
src/NCurses/: NCurses.cpp  NCurses.hpp  NCursesUtils.cpp  NCursesUtils.hpp
src/Pacman/: Pacman.hpp  PacmanAction.cpp  PacmanCollision.cpp  PacmanCreation.cpp  PacmanData.cpp  PacmanEngine.cpp  PacmanEntity.cpp  PacmanMob.cpp  Pathfinder.cpp  Pathfinder.hpp
src/Sdl2/: Sdl2.cpp  Sdl2.hpp
src/Sfml/: Sfml.cpp  Sfml.hpp
src/Snake/: Snake.cpp  Snake.hpp  SnakeData.cpp  SnakeEntity.cpp
